--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dogsnshows</title>
+  <title>DogsNShows | Show Management, Litter Ads, Show Results, Dog Management etc.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/apple-icon.png">
 </head>
 <body>
   <app-root></app-root>
